--- a/shelter/pages/pets/styles.css
+++ b/shelter/pages/pets/styles.css
@@ -287,6 +287,7 @@ nav li a:active {
 
 #pets {
     display: flex;
+    justify-content: center;
 }
 #pets_wrapper {
     background-color: var(--color-light);
@@ -305,7 +306,7 @@ nav li a:active {
     text-align: center;
 }
 
-#slider {
+.slider {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -325,15 +326,13 @@ nav li a:active {
     justify-content: space-between;
 }
 
-.card p {
+
+.pet_name {
+    margin-top: 30px;
     font-family: Georgia;
     font-size: 20px;
     text-align: center;
     color: var(--color-dark-second);
-}
-
-.pet_name {
-    margin-top: 30px;
 }
 
 .button_learn {
