--- a/shelter/pages/pets/styles.css
+++ b/shelter/pages/pets/styles.css
@@ -614,3 +614,122 @@ footer a {
     }
 
 }
+
+
+/* Popup */
+
+.popup_wrapper{
+    display: none;
+}
+
+.popup_wrapper_active {
+    display: block;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    position: fixed;
+    background-color: rgba(8, 8, 8, 0.8);
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.popup {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.popup_window {
+    display: flex;
+    flex-direction: column;
+    margin: 190px;
+}
+
+.popup_content {
+    margin-right: 52px;
+    border-radius: 10px;
+    background-color: var(--color-light);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+}
+
+.img_wrapper img {
+    width: 500px;
+    height: 500px;
+}
+
+.popup_close {
+    width: 52px;
+    height: 52px;
+    border-radius: 50px;
+    align-self: flex-end;
+    border: 3px var(--color-primary) solid;
+}
+
+.popup_close:hover {
+    background-color: var(--color-primary);
+    cursor: pointer;
+}
+
+.popup_info {
+    margin: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
+.pets_list {
+    margin-left: 15px;
+   
+}
+
+.pets_list li::marker {
+    color: var(--color-primary);
+}
+
+.pets_list li span {
+    font-weight: bolder;
+}
+.pets_list li {
+    margin-bottom: 10px;
+}
+
+.popup_subtitle {
+    font-family: Georgia;
+    font-size: 20px;
+    line-height: 115%;
+    letter-spacing: 0.06em;
+}
+
+
+@media (max-width: 450.9px) {
+    .img_wrapper img {
+        display: none;
+    }
+    .popup_window {
+        margin: 0;
+        margin-left: 40px;
+    }
+
+    .popup_name {
+        text-align: center;
+    }
+}
+
+@media (min-width: 451px) and (max-width: 800px){
+    .img_wrapper img {
+        width: 350px;
+        height: 350px;
+    }
+
+    .popup_window {
+        margin: 0;
+        margin-left: 70px;
+    }
+}
